Fix text-align in css

--- a/card/css.css
+++ b/card/css.css
@@ -1,7 +1,7 @@
 .card {
  font-family: arial;
  font-size: 20px;
- text-align: left;
+ text-align: center;
  color: black;
  background-color: white;
 }
